--- a/style.css
+++ b/style.css
@@ -76,10 +76,18 @@ div.main-container {
     border: 1px solid black;
     border-radius: 10px;
     /* box-sizing: border-box; */
+    display: flex;
+    flex-direction: column;
     height: 130px;
     width: auto;
     text-align: center;
     margin-bottom: 20px;
-    padding: 20px 20px;
+    padding: 0px 20px;
     flex-wrap: wrap;
 }
+
+.eraser-box {
+    justify-content: center;
+    gap: 20px;
+}
+
