change settings button color to blue

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ input[type="color"]::-moz-color-swatch {
   }
 
 button {
-    background-color: aquamarine;
+    background-color: #5dd5e5;
     border: 1px solid black;
     text-align: center;
     border-radius: 10px;
