change toggle button colors

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ input[type="color"] {
 }
 
 button {
-    background-color: #5dd5e5;
+    background-color: #9795f9;
     border: 1px solid black;
     text-align: center;
     border-radius: 10px;
